Projet total/Assembleur/tests/good/testfile-good-mov.ms
    .section text
mov %rax %rbx
mov %rax 42
mov (%rax) %rbx
mov %rax (%rbx)
