Projet total/Assembleur/tests/bad/testfile-bad-mov-4.ms
; can't move memory to memory 
    .section text
mov (%rax) y

    .section data
y: